--- a/StorhaugenWebsite/wwwroot/css/Food.css
+++ b/StorhaugenWebsite/wwwroot/css/Food.css
@@ -593,7 +593,7 @@
     background: rgba(255, 255, 255, 0.05); /* Very subtle background */
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-radius: 50px;
-    padding: 3px 10px 3px 3px;
+    padding: 2px 10px 2px 2px;
     margin-right: 6px;
     transition: all 0.2s ease;
     gap:4px;
@@ -621,7 +621,8 @@
 
 /* The Number Score */
 .rating-score {
-    font-size: 0.85rem;
+    font-size: 0.80rem;
+    margin-top: 1px;
     font-weight: 700;
     color: var(--mud-palette-text-primary);
 }
